--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: rgb(61, 58, 58);
     font-family: sans-serif;
     color: rgb(221, 217, 217);
@@ -71,4 +71,4 @@ button{
     font-size: 16px;
     padding: 5px 10px;
     border-radius: 5px;
-}
+} */
